--- a/module2-intermediate-linear-algebra/LS_DS_132_Intermediate_Linear_Algebra_Assignment.ipynb
+++ b/module2-intermediate-linear-algebra/LS_DS_132_Intermediate_Linear_Algebra_Assignment.ipynb
@@ -36,15 +36,82 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "w1iZfYvBtEA1",
+        "id": "fvNgqXCLPM4z",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "class MyStats:\n",
+        "    def __init__(self, nums, xnums, ynums):\n",
+        "        self.nums = nums\n",
+        "        self.xnums = xnums\n",
+        "        self.ynums = ynums\n",
+        "        \n",
+        "    def mean(self):\n",
+        "        mean = float(sum(self.nums)) / max(len(self.nums), 1)\n",
+        "        return mean\n",
+        "    def var(self):\n",
+        "        div = []\n",
+        "        mean = float(sum(self.nums)) / max(len(self.nums), 1)\n",
+        "        for num in self.nums:\n",
+        "            deviations = pow(abs(num-mean),2)\n",
+        "            div.append(deviations)\n",
+        "        var = float(sum(div)) / max(len(self.nums), 1)\n",
+        "        return var\n",
+        "    def sd(self):\n",
+        "        div = []\n",
+        "        mean = float(sum(self.nums)) / max(len(self.nums), 1)\n",
+        "        for num in self.nums:\n",
+        "            deviations = pow(abs(num-mean),2)\n",
+        "            div.append(deviations)\n",
+        "        var = float(sum(div)) / max(len(self.nums), 1)\n",
+        "        sd = var**.5\n",
+        "        return sd\n",
+        "    def covar(self):\n",
+        "        div = []\n",
+        "        xmean = float(sum(self.xnums)) / max(len(self.xnums), 1)\n",
+        "        ymean = float(sum(self.ynums)) / max(len(self.ynums), 1)\n",
+        "        for xnum in self.xnums:\n",
+        "            for ynum in self.ynums:\n",
+        "                dev = ((xnum - xmean)*(ynum - ymean)) / max(len(self.nums), 1)\n",
+        "                div.append(dev)\n",
+        "                covar = float(sum(div))\n",
+        "                return covar"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab_type": "code",
+        "outputId": "5cccf225-6e89-497f-9f3a-d4a8ddb19582",
+        "id": "yYhH5IXUSW0B",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 214
+        }
+      },
+      "source": [
+        "sales_this_week = MyStats([3505, 2400, 3027, 2798, 3700, 3250, 2689])\n",
+        "print(f'Mean: {sales_this_week.mean()}')\n",
+        "print(f'Var: {sales_this_week.var()}')\n",
+        "print(f'SD: {sales_this_week.sd()}')"
+      ],
+      "execution_count": 79,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TypeError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-79-3f1320ff7b5c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msales_this_week\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMyStats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3505\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2400\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3027\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2798\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3700\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3250\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2689\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Mean: {sales_this_week.mean()}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Var: {sales_this_week.var()}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'SD: {sales_this_week.sd()}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() missing 2 required positional arguments: 'xnums' and 'ynums'"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -59,15 +126,45 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "G7ZB0krot564",
         "colab_type": "code",
+        "id": "hGafMT8XSUit",
         "colab": {}
       },
       "source": [
-        ""
+        "sales_covariance = MyStats([1,2,3,4,5],[127, 80, 105, 92, 120, 115, 93],[3505, 2400, 3027, 2798, 3700, 3250, 2689])"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "BXx7qsJKbE1t",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "0731d77e-e717-4e86-e0d9-6b09ff3da789"
+      },
+      "source": [
+        "sales_covariance.covar()"
+      ],
+      "execution_count": 91,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "2028.8244897959182"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 91
+        }
+      ]
     },
     {
       "cell_type": "markdown",
