--- a/module2-intermediate-linear-algebra/LS_DS_132_Intermediate_Linear_Algebra_Assignment.ipynb
+++ b/module2-intermediate-linear-algebra/LS_DS_132_Intermediate_Linear_Algebra_Assignment.ipynb
@@ -85,11 +85,11 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "5cccf225-6e89-497f-9f3a-d4a8ddb19582",
+        "outputId": "d67db9c8-a87c-46b5-926d-ccb8af949b67",
         "id": "yYhH5IXUSW0B",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 214
+          "height": 231
         }
       },
       "source": [
@@ -98,7 +98,7 @@
         "print(f'Var: {sales_this_week.var()}')\n",
         "print(f'SD: {sales_this_week.sd()}')"
       ],
-      "execution_count": 79,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "error",
@@ -107,8 +107,8 @@
           "traceback": [
             "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
             "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-79-3f1320ff7b5c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msales_this_week\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMyStats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m3505\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2400\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3027\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2798\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3700\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3250\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2689\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Mean: {sales_this_week.mean()}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Var: {sales_this_week.var()}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'SD: {sales_this_week.sd()}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mTypeError\u001b[0m: __init__() missing 2 required positional arguments: 'xnums' and 'ynums'"
+            "\u001b[0;32m<ipython-input-3-b94a3507bfdd>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmystats\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMyStats\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0msales_this_week\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3505\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2400\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3027\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2798\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3700\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m3250\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m2689\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Mean: {mystats.mean(sales_this_week)}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'Var: {mystats.var(sales_this_week)}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34mf'SD: {mystats.sd(sales_this_week)}'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTypeError\u001b[0m: __init__() missing 3 required positional arguments: 'nums', 'xnums', and 'ynums'"
           ]
         }
       ]
@@ -141,30 +141,13 @@
       "metadata": {
         "id": "BXx7qsJKbE1t",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "0731d77e-e717-4e86-e0d9-6b09ff3da789"
+        "colab": {}
       },
       "source": [
         "sales_covariance.covar()"
       ],
-      "execution_count": 91,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "2028.8244897959182"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 91
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -621,11 +604,7 @@
       "metadata": {
         "id": "cp52kZra-ykj",
         "colab_type": "code",
-        "outputId": "12502200-eafe-4e20-bfb7-2d539c6027cb",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 347
-        }
+        "colab": {}
       },
       "source": [
         "import pandas as pd\n",
@@ -645,20 +624,7 @@
         "plt.show()"
       ],
       "execution_count": 0,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAdkAAAFKCAYAAABRtSXvAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4yLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvNQv5yAAAGBhJREFUeJzt3X9s1IX9x/FXe9craXvKlR4VDPgD\nvOFGjDXRBcVfBCWCWQIbtusQFxcnqWy6yAargHxDXALZEicSYfz4Y1sWO1GxS1QMvzK38CNIg+ki\nlrJsK20p1/YGJ6XH9XrfP/jSL3MtV9p73+fu4/PxF+U++fT9Tn88+/lcf+Qlk8mkAABA2uU7PQAA\nAG5FZAEAMEJkAQAwQmQBADBCZAEAMEJkAQAw4k33CcPhaLpPqUCgSJFIT9rPm2lu2UNyzy5u2UNi\nl2zklj0kdrmaYNA/5GM5cSXr9XqcHiEt3LKH5J5d3LKHxC7ZyC17SOwyUjkRWQAAchGRBQDACJEF\nAMAIkQUAwAiRBQDACJEFAMAIkQUAwAiRBQDASMrf+HT+/HktX75cZ8+eVTwe13PPPaf7778/E7MB\nGKZYPKH2zvNKxBMqLHDPLw0A0i3THyspI/vuu+/qlltu0YsvvqiOjg499dRT+vDDD80HA5Baor9f\ndXub1dAUVnc0plJ/oSpCQVXOmipPPjeqgMuc+lhJGdlAIKDPP/9cknTu3DkFAgGzYQBcm7q9zdp9\n5NTAy13nYgMvV88OOTUWkHWc+lhJme958+apra1NjzzyiBYtWqTly5ebDQNg+GLxhBqawoM+1tDU\nqVg8keGJgOzk5MdKyivZ9957TxMnTtS2bdt0/Phx1dbW6p133hny+ECgyOSXL1/trxzkErfsIbln\nl1zdo73zvLqjsUEfi0R75fEVKFhWnOGp0idX3y5f5pY9pNzdxcmPlZSRPXr0qGbOnClJmjZtms6c\nOaNEIiGPZ/CQWvwppGDQb/In9DLNLXtI7tkll/dIxBMq9Req69x/f/II+McocTGes7vl8tvlSm7Z\nQ8rtXaw/Vkb1p+5uuukmHTt2TJLU2tqq4uLiIQMLIHMKCzyqCAUHfawiVMZ3GQP/x8mPlZRXspWV\nlaqtrdWiRYvU19enNWvWmA0D4NpUzpoq6dLzSpForwL+MaoIlQ38P4BLnPpYyUsmk8l0ntDidkIu\n36a4klv2kNyzi1v2iMUT8vgKlLgYd8UVrFveLm7ZQ3LPLhYfK6O6XQwg+xUWeDShrNgVgQUsZfpj\nhcgCAGCEyAIAYITIAgBghMgCAGCEyAIAYITIAgBghMgCAGCEyAIAYITIAgBghMgCAGCEyAIAYITI\nAgBghMgCAGCEyAIAYITIAgBghMgCAGCEyAIAYITIAgBghMgCAGCEyAIAYITIAgBghMgCAGCEyAIA\nYITIAgBgxJvqgLfeekv19fUDLzc2NqqhocF0KAAA3CBlZBcuXKiFCxdKkg4fPqwPPvjAfCgAANzg\nmm4Xb9y4UTU1NVazAADgKsOO7KeffqoJEyYoGAxazgMAgGvkJZPJ5HAOXL16tebNm6dvfvObVz2u\nry8hr9eTluEAAMhlw47snDlz9Kc//Uk+n++qx4XD0bQMdqVg0G9y3kxzyx6Se3Zxyx4Su2Qjt+wh\nsUuq8w1lWLeLOzo6VFxcnDKwAADg/w0rsuFwWKWlpdazAADgKsOK7PTp07V161brWQAAcBV+4xMA\nAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABG\niCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogs\nAABGiCwAAEaGFdn6+np961vf0oIFC7R//37jkQAAcIeUkY1EItq4caP+8Ic/aNOmTdqzZ08m5gIA\nIOd5Ux1w4MABzZgxQyUlJSopKdHatWszMRcAADkv5ZXsqVOn1NvbqyVLlqi6uloHDhzIxFwAAOS8\nvGQymbzaAb/5zW909OhRvf7662pra9PixYu1b98+5eXlDXp8X19CXq/HZFgAAHJJytvF48aNU0VF\nhbxeryZPnqzi4mJ1d3dr3Lhxgx4fifSkfchg0K9wOJr282aaW/aQ3LOLW/aQ2CUbuWUPiV1SnW8o\nKW8Xz5w5UwcPHlR/f78ikYh6enoUCATSNhwAAG6V8kq2vLxcc+bM0RNPPCFJWrlypfLz+fFaAABS\nSRlZSaqqqlJVVZX1LAAAuAqXpAAAGCGyAAAYIbIAABghsgAAGCGyAAAYIbIAABghsgAAGCGyAAAY\nIbIAABghsgAAGCGyAAAYIbIAABghsgAAGCGyAAAYIbIAABghsgAAGCGyAAAYIbIAABghsgAAGCGy\nAAAYIbIAABghsgAAGCGyAAAYIbIAABghsgBgIBZPqL3zvGLxhNOjwEHeVAccOnRIzz//vG677TZJ\nUigU0qpVq8wHA4BclOjvV93eZjU0hdUdjanUX6iKUFCVs6bKk891zVdNyshK0j333KPXXnvNehYA\nyHl1e5u1+8ipgZe7zsUGXq6eHXJqLDiEL6sAIE1i8YQamsKDPtbQ1Mmt46+gYV3JNjc3a8mSJTp7\n9qyWLl2q++67b8hjA4Eieb2etA14WTDoT/s5neCWPST37OKWPSR2cVp753l1R2ODPhaJ9srjK1Cw\nrDjDU6VPLr5NhpKpXVJG9uabb9bSpUv12GOPqaWlRYsXL9ZHH30kn8836PGRSE/ahwwG/QqHo2k/\nb6a5ZQ/JPbu4ZQ+JXbJBIp5Qqb9QXef+O7QB/xglLsZzci8pd98mg0n3LlcLdsrbxeXl5Zo7d67y\n8vI0efJklZWVqaOjI23DAYBbFBZ4VBEKDvpYRahMhQXpv8uH7JbySra+vl7hcFg/+MEPFA6H1dXV\npfLy8kzMBgA5p3LWVEmXnoONRHsV8I9RRahs4P/x1ZIysrNmzdKyZcu0Z88exeNxrVmzZshbxQDw\nVefJz1f17JC+/eAUeXwFSlyMcwX7FZYysiUlJdq0aVMmZgEA1ygs8ChYVuya5zExMvwIDwAARogs\nAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAA\nRogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEay\nPrKxeELtnecViyecHgUAgGviHc5Bvb29evzxx1VTU6MFCxZYzyRJSvT3q25vsxqawuqOxlTqL1RF\nKKjKWVPlyc/6rw0AABheZN944w1df/311rP8h7q9zdp95NTAy13nYgMvV88OZXQWAABGIuUl4cmT\nJ9Xc3KyHHnooA+NcEosn1NAUHvSxhqZObh0DAHJCyivZdevWadWqVdq5c+ewThgIFMnr9YxqqPbO\n8+qOxgZ9LBLtlcdXoGBZ8aheh1OCQb/TI6SNW3Zxyx4Su2Qjt+whsctIXDWyO3fu1J133qlJkyYN\n+4SRSM+oh0rEEyr1F6rr3H+HNuAfo8TFuMLh6KhfT6YFg/6cnHswbtnFLXtI7JKN3LKHxC6pzjeU\nq0Z2//79amlp0f79+3X69Gn5fD7dcMMNuvfee9M23GAKCzyqCAX/4znZyypCZSosGN2VMgAAmXDV\nyL766qsD/96wYYNuvPFG88BeVjlrqqRLz8FGor0K+MeoIlQ28P8AAGS7YX13sRM8+fmqnh3Stx+c\nIo+vQImLca5gAQA5ZdiR/dGPfmQ5x5AKCzwKlhW75rkAAMBXB7/VAQAAI0QWAAAjRBYAACNEFgAA\nI0QWAAAjRBYAACNEFgAAI0QWAAAjRBYAACNEFgAAI0QWAAAjRBYAACNEFgAAI0QWAAAjRBYAACNE\nFgAAI0QWAAAjRBYAACNEFgAAI0QWAAAjRBYAACNEFgAAI0QWAAAjRBYAACNEFgAAI95UB1y4cEEr\nVqxQV1eXYrGYampq9PDDD2diNgAAclrKyO7bt0/Tp0/XM888o9bWVj399NNEFgCAYUgZ2blz5w78\nu729XeXl5aYDAQDgFnnJZDI5nAOrqqp0+vRpbdq0SdOmTRvyuL6+hLxeT9oGBAAgVw07spL02Wef\n6Wc/+5nq6+uVl5c36DHhcDRtw10WDPpNzptpbtlDcs8ubtlDYpds5JY9JHZJdb6hpPzu4sbGRrW3\nt0uSbr/9diUSCXV3d6dtOAAA3CplZI8cOaLt27dLkjo7O9XT06NAIGA+GAAAuS5lZKuqqtTd3a3q\n6mr98Ic/1OrVq5Wfz4/XAgCQSsrvLh4zZox+9atfZWIWAABchUtSAACMEFkAAIwQWQAAjBBZAACM\nEFkAAIwQWQAAjBBZAACMEFkAAIwQWQAAjBBZAACMEFkAAIwQWQAAjBBZAACMEFkAAIwQWQAAjBBZ\nAACMEFkAAIwQWQAAjBBZAACMEFkAAIwQWQAAjBBZAACMEFkAAIwQWQAAjHiHc9D69ev1ySefqK+v\nT88++6weffRR67kAc9Gei2o7EZbfly9/kc/pcQC4UMrIHjx4UCdOnFBdXZ0ikYjmz59PZJHTLvb1\n6ZXfHlVr+Av1J6X8POnGYIleWnyXfN5hfd0JAMOS8nbx3XffrV//+teSpOuuu04XLlxQIpEwHwyw\n8spvj6rlzKXASlJ/Umo584Ve+e1RZwcD4DopI+vxeFRUVCRJ2rFjhx544AF5PB7zwQAL0Z6Lag1/\nMehjreEvFO25mOGJALjZsO+N7d69Wzt27ND27duvelwgUCSvN/0RDgb9aT+nE9yyh5Sbu7SdCA9c\nwX5Zf1KKXuzXrTfl3l6X5eLbZChu2cUte0jsMhLDiuzHH3+sTZs2aevWrfL7rz5YJNKTlsGuFAz6\nFQ5H037eTHPLHlLu7uL35Ss/T4OGNj/v0uO5uJeUu2+TwbhlF7fsIbFLqvMNJeXt4mg0qvXr12vz\n5s0aO3Zs2oYCnOAv8unGYMmgj90YLOG7jAGkVcrIvv/++4pEInrhhRf05JNP6sknn1RbW1smZgNM\nvLT4Lk0aX6L8vEsv5+dJk8Zf+u5iAEinlLeLKysrVVlZmYlZgIzweb36n6fvUbTnoqIX+/k5WQBm\n+KFAfGX5i3y69Sb3PM8EIPvwaxUBADBCZAEAMEJkAQAwQmQBADBCZAEAMEJkAQAwQmQBADBCZAEA\nMEJkAQAwQmQBADBCZAEAMEJkAQAwQmQBADBCZAEAMEJkAQAwQmQBADBCZAEAMEJkAQAwQmQBADBC\nZAEAMEJkAQAwQmQBADBCZAEAMEJkAQAwMqzINjU1afbs2fr9739vPQ8AAK6RMrI9PT1au3atZsyY\nkYl5AABwjZSR9fl82rJli8aPH5+JeQAAcA1vygO8Xnm9KQ8DAABfkvZ6BgJF8no96T6tgkF/2s/p\nBLfsIblnF7fsIbFLNnLLHhK7jETaIxuJ9KT7lAoG/QqHo2k/b6a5ZQ/JPbu4ZQ+JXbKRW/aQ2CXV\n+YbCj/AAAGAk5ZVsY2Oj1q1bp9bWVnm9Xu3atUsbNmzQ2LFjMzEfAAA5K2Vkp0+frt/97neZmAUA\nAFfhdjEAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAA\nRogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaILAAARogsAABGiCwAAEaI\nLAAARogsAABGiCwAAEa8wznoF7/4hY4dO6a8vDzV1tbqjjvusJ4LWSwWT6i987wS8YQKCzxOjwMA\nWStlZA8fPqx//vOfqqur08mTJ1VbW6u6urpMzIYsk+jvV93eZjU0hdUdjanUX6iKUFCVs6bKk89N\nEQD4spSfGQ8cOKDZs2dLkqZMmaKzZ8/qiy++MB8M2adub7N2HzmlrnMxJZNS17mYdh85pbq9zU6P\nBgBZKWVkOzs7FQgEBl4uLS1VOBw2HQrZJxZPqKFp8Ld7Q1OnYvFEhicCgOw3rOdkr5RMJq/6eCBQ\nJK83/c/TBYP+tJ/TCbm6R3vneXVHY4M+Fon2yuMrULCsOMNTpUeuvk0Gwy7Zxy17SOwyEikjO378\neHV2dg68fObMGQWDwSGPj0R60jPZFYJBv8LhaNrPm2m5vEcinlCpv1Bd5/47tAH/GCUuxnNyt1x+\nm3wZu2Qft+whsUuq8w0l5e3i++67T7t27ZIk/e1vf9P48eNVUlKStuGQGwoLPKoIDf7FVUWojO8y\nBoBBpLySveuuu/SNb3xDVVVVysvL08svv5yJuZCFKmdNlXTpOdhItFcB/xhVhMoG/h8A8J+G9Zzs\nsmXLrOdADvDk56t6dkjffnCKPL4CJS7GuYIFgKvghxtxzQoLPJpQVkxgASAFIgsAgBEiCwCAESIL\nAIARIgsAgBEiCwCAESILAIARIgsAgBEiCwCAkbxkqj+rAwAARoQrWQAAjBBZAACMEFkAAIwQWQAA\njBBZAACMEFkAAIwM64+2O6WpqUk1NTX6/ve/r0WLFjk9zqisX79en3zyifr6+vTss8/q0UcfdXqk\na3bhwgWtWLFCXV1disViqqmp0cMPP+z0WKPS29urxx9/XDU1NVqwYIHT44zIoUOH9Pzzz+u2226T\nJIVCIa1atcrhqUamvr5eW7duldfr1Y9//GM99NBDTo80Im+99Zbq6+sHXm5sbFRDQ4ODE43c+fPn\ntXz5cp09e1bxeFzPPfec7r//fqfHumb9/f16+eWXdeLECRUUFGjNmjWaMmWK+evN2sj29PRo7dq1\nmjFjhtOjjNrBgwd14sQJ1dXVKRKJaP78+TkZ2X379mn69Ol65pln1NraqqeffjrnI/vGG2/o+uuv\nd3qMUbvnnnv02muvOT3GqEQiEW3cuFFvv/22enp6tGHDhpyN7MKFC7Vw4UJJ0uHDh/XBBx84PNHI\nvfvuu7rlllv04osvqqOjQ0899ZQ+/PBDp8e6Znv27FE0GtWbb76pf/3rX3rllVe0efNm89ebtZH1\n+XzasmWLtmzZ4vQoo3b33XfrjjvukCRdd911unDhghKJhDwej8OTXZu5c+cO/Lu9vV3l5eUOTjN6\nJ0+eVHNzc85+InebAwcOaMaMGSopKVFJSYnWrl3r9EhpsXHjRv3yl790eowRCwQC+vzzzyVJ586d\nUyAQcHiikfnHP/4x8Hl48uTJamtry8jn4ax9Ttbr9WrMmDFOj5EWHo9HRUVFkqQdO3bogQceyLnA\nXqmqqkrLli1TbW2t06OMyrp167RixQqnx0iL5uZmLVmyRN/97nf117/+1elxRuTUqVPq7e3VkiVL\nVF1drQMHDjg90qh9+umnmjBhgoLBoNOjjNi8efPU1tamRx55RIsWLdLy5cudHmlEQqGQ/vKXvyiR\nSOjvf/+7WlpaFIlEzF9v1l7JutHu3bu1Y8cObd++3elRRuXNN9/UZ599pp/+9Keqr69XXl6e0yNd\ns507d+rOO+/UpEmTnB5l1G6++WYtXbpUjz32mFpaWrR48WJ99NFH8vl8To92zf7973/r9ddfV1tb\nmxYvXqx9+/bl5PvXZTt27ND8+fOdHmNU3nvvPU2cOFHbtm3T8ePHVVtbq3feecfpsa7Zgw8+qKNH\nj+p73/uevva1r+nWW29VJn6rMJHNkI8//libNm3S1q1b5ff7nR5nRBobGzVu3DhNmDBBt99+uxKJ\nhLq7uzVu3DinR7tm+/fvV0tLi/bv36/Tp0/L5/Pphhtu0L333uv0aNesvLx84Fb+5MmTVVZWpo6O\njpz7AmLcuHGqqKiQ1+vV5MmTVVxcnLPvX5cdOnRIK1eudHqMUTl69KhmzpwpSZo2bZrOnDmTk093\nSdJPfvKTgX/Pnj07I+9bWXu72E2i0ajWr1+vzZs3a+zYsU6PM2JHjhwZuArv7OxUT09Pzj4/8+qr\nr+rtt9/WH//4Ry1cuFA1NTU5GVjp0nfkbtu2TZIUDofV1dWVk8+Xz5w5UwcPHlR/f78ikUhOv39J\nUkdHh4qLi3PyjsKVbrrpJh07dkyS1NraquLi4pwM7PHjx/Xzn/9ckvTnP/9ZX//615Wfb5/ArL2S\nbWxs1Lp169Ta2iqv16tdu3Zpw4YNORmp999/X5FIRC+88MLA/61bt04TJ050cKprV1VVpZdeeknV\n1dXq7e3V6tWrM/JOiqubNWuWli1bpj179igej2vNmjU5+Ym9vLxcc+bM0RNPPCFJWrlyZU6/f4XD\nYZWWljo9xqhVVlaqtrZWixYtUl9fn9asWeP0SCMSCoWUTCb1ne98R4WFhRn7ZjT+1B0AAEZy98tE\nAACyHJEFAMAIkQUAwAiRBQDACJEFAMAIkQUAwAiRBQDACJEFAMDI/wKP2e0SSZYWGQAAAABJRU5E\nrkJggg==\n",
-            "text/plain": [
-              "<matplotlib.figure.Figure at 0x7f787cfb2978>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "outputs": []
     },
     {
       "cell_type": "code",
