--- a/module2-intermediate-linear-algebra/LS_DS_132_Intermediate_Linear_Algebra_Assignment.ipynb
+++ b/module2-intermediate-linear-algebra/LS_DS_132_Intermediate_Linear_Algebra_Assignment.ipynb
@@ -110,7 +110,7 @@
       "cell_type": "code",
       "metadata": {
         "colab_type": "code",
-        "outputId": "3b8d7088-0def-4d47-a246-b3ae73619293",
+        "outputId": "e09d20d7-7352-4b64-e538-e34ba0a6df78",
         "id": "yYhH5IXUSW0B",
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -155,7 +155,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "65e98efa-fa40-447f-fe00-013090eda14e"
+        "outputId": "0dcb2f92-7981-4b51-920f-d4ac127f8cdc"
       },
       "source": [
         "sales.cov(sales_this_week,sales_last_week,)"
@@ -220,7 +220,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 530
         },
-        "outputId": "b5173512-236d-4f3d-cd30-cb6f421a0af9"
+        "outputId": "ef3129d8-0de2-49eb-a47a-bcabe93352d3"
       },
       "source": [
         "URL = \"https://raw.githubusercontent.com/Geoyi/Cleaning-Titanic-Data/master/titanic_clean.csv\"\n",
@@ -390,7 +390,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 204
         },
-        "outputId": "ee1d201a-cbd9-4293-c1be-f1999b8d95b7"
+        "outputId": "ea75b442-6abf-4405-dd1b-6167f1e530f4"
       },
       "source": [
         "df_nums = df.select_dtypes(include=['float64', 'int'])\n",
@@ -515,7 +515,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 317
         },
-        "outputId": "41d6e7b0-d404-4160-9328-c3a9a06b886c"
+        "outputId": "852b7cd1-a0bc-471b-c94f-fbace0fd1ae0"
       },
       "source": [
         "df_nums.cov()"
@@ -675,9 +675,9 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 317
+          "height": 297
         },
-        "outputId": "701d81cb-dfa9-4dc3-e239-41349cf4b7b1"
+        "outputId": "25e10501-a9d9-4069-85f3-7ddd797fe91f"
       },
       "source": [
         "df_nums.corr()"
@@ -859,7 +859,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 324
         },
-        "outputId": "2de689fe-3098-4c9d-ed73-b7414bfae6db"
+        "outputId": "fddf5cb1-a20b-4965-a0f9-5a0b8b023015"
       },
       "source": [
         "vec1 = np.array([4,4])\n",
@@ -884,7 +884,7 @@
         "ax.axvline(x=0, color='k')\n",
         "plt.show;"
       ],
-      "execution_count": 25,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -925,13 +925,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "3a6ef09f-2e2a-43ce-d13f-09d54061c3c7"
+        "outputId": "692e8250-e530-425d-88b6-12fdea4ce334"
       },
       "source": [
         "# No they are not orthogonal vectors, product is 0.\n",
         "np.dot([-5,3,7],[6,-8,2])"
       ],
-      "execution_count": 27,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -943,7 +943,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 27
+          "execution_count": 12
         }
       ]
     },
@@ -972,13 +972,96 @@
       "metadata": {
         "id": "IlV_uaYK1EQB",
         "colab_type": "code",
-        "colab": {}
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "17fa3392-6884-471f-c25b-59725f9cbf39"
       },
       "source": [
-        ""
+        "c = np.array([2,-15,6,20])\n",
+        "norm_c = np.linalg.norm(c)\n",
+        "norm_c"
       ],
-      "execution_count": 0,
-      "outputs": []
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "25.787593916455254"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 13
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6HRTvpg4FSVD",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "47d29d62-f259-4496-81af-246fa26b1fc4"
+      },
+      "source": [
+        "np.dot(c,c)"
+      ],
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "665"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 14
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "jSye3b4_FWJp",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 85
+        },
+        "outputId": "185dca5d-7fa8-4e70-da91-af16877a28f5"
+      },
+      "source": [
+        "cT = np.array(pd.DataFrame(c.T))\n",
+        "cT"
+      ],
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[  2],\n",
+              "       [-15],\n",
+              "       [  6],\n",
+              "       [ 20]])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 15
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1033,15 +1116,78 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "I3W8ZiHR1_Fa",
+        "id": "IF3p5chzDhAk",
         "colab_type": "code",
         "colab": {}
       },
       "source": [
-        ""
+        "f=np.array([4,12,11,9,2])\n",
+        "norm_f = np.linalg.norm(f)"
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "I3W8ZiHR1_Fa",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "605523b5-3573-4304-f1eb-7b5a4aabdcaa"
+      },
+      "source": [
+        "f_hat = f/norm_f\n",
+        "f_hat"
+      ],
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([0.20908335, 0.62725005, 0.57497921, 0.47043754, 0.10454167])"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 17
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "9F65cX1PD-qU",
+        "colab_type": "code",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 34
+        },
+        "outputId": "996294b5-cb06-4d31-b440-ddeff967260e"
+      },
+      "source": [
+        "f_hat_norm = np.linalg.norm(f_hat)\n",
+        "f_hat_norm"
+      ],
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "0.9999999999999999"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 18
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1292,11 +1438,7 @@
       "metadata": {
         "id": "cp52kZra-ykj",
         "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 265
-        },
-        "outputId": "2a4d5a28-a9e0-4725-a395-3615dceeaf1a"
+        "colab": {}
       },
       "source": [
         "import pandas as pd\n",
@@ -1315,21 +1457,8 @@
         "plt.scatter(df.x, df.y)\n",
         "plt.show()"
       ],
-      "execution_count": 11,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "image/png": "iVBORw0KGgoAAAANSUhEUgAAAWoAAAD4CAYAAADFAawfAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADh0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uMy4xLjIsIGh0\ndHA6Ly9tYXRwbG90bGliLm9yZy8li6FKAAAP90lEQVR4nO3db4idZ53G8e/lJNJp/ROxs9Kk3Y0v\nlmHFsqZ7qH+37Fpr2rXUUPZFCy6sLGQXXLd1l4gRYREWyhIRfbEIofUf1kht0yDiNhXUVWGNTpK6\naZtm0VrbTKoZcWOtO2zT+NsXc6YmcdI5x54zz53k+4Ehc+7zzDkX4cw1Z+7nfuZOVSFJateLug4g\nSXp+FrUkNc6ilqTGWdSS1DiLWpIat2ocD3rxxRfX+vXrx/HQknRO2rt378+qamqp+8ZS1OvXr2dm\nZmYcDy1J56QkPz7TfU59SFLjLGpJapxFLUmNs6glqXEWtSQ1bqCiTvK+JA8leTDJjiQXjDuYJGnB\nssvzkqwD/gF4TVXNJ7kLuAn49JizSSOza/8s23Yf4sixedaumWTLxmk2bVjXdSydI8b9+hp0HfUq\nYDLJceBC4MjIEkhjtmv/LFt3HmD++AkAZo/Ns3XnAQDLWi/YSry+lp36qKpZ4CPA48CTwC+q6v6R\nPLu0ArbtPvTcN9Gi+eMn2Lb7UEeJdC5ZidfXskWd5BXAO4FXA2uBi5K8a4njNieZSTIzNzc3soDS\nC3Xk2PxQ49IwVuL1NcjJxLcBP6qquao6DuwE3nT6QVW1vap6VdWbmlrycnWpE2vXTA41Lg1jJV5f\ngxT148AbklyYJMDVwMGRJZDGbMvGaSZXT5wyNrl6gi0bpztKpHPJSry+lj2ZWFV7ktwN7AOeBfYD\n20eWQBqzxRM6rvrQOKzE6yvj2Ny21+uVfz1PkgaXZG9V9Za6zysTJalxFrUkNc6ilqTGWdSS1DiL\nWpIaZ1FLUuMsaklqnEUtSY2zqCWpcRa1JDXOopakxlnUktQ4i1qSGmdRS1LjLGpJapxFLUmNG2Rz\n2+kkD5z08VSSW1cinCRpsK24DgGvA0gyAcwC9445lySpb9ipj6uBH1bVj8cRRpL024Yt6puAHUvd\nkWRzkpkkM3Nzcy88mSQJGKKok7wYuAH44lL3V9X2qupVVW9qampU+STpvDfMO+rrgH1V9dNxhZEk\n/bZhivpmzjDtIUkan4GKOslFwDXAzvHGkSSdbtnleQBV9SvglWPOIklaglcmSlLjLGpJapxFLUmN\ns6glqXEWtSQ1zqKWpMZZ1JLUOItakhpnUUtS4yxqSWqcRS1JjbOoJalxFrUkNc6ilqTGWdSS1DiL\nWpIaN+gOL2uS3J3kkSQHk7xx3MEkSQsG2uEF+DhwX1X9ZX838gvHmEmSdJJlizrJy4GrgL8GqKpn\ngGfGG0uStGiQqY9XA3PAp5LsT3J7f7PbUyTZnGQmyczc3NzIg0rS+WqQol4FXAF8oqo2AL8CPnD6\nQVW1vap6VdWbmpoacUxJOn8NUtSHgcNVtad/+24WiluStAKWLeqq+gnwRJLp/tDVwMNjTSVJes6g\nqz7eC9zZX/HxKPDu8UWSJJ1soKKuqgeA3pizSJKW4JWJktQ4i1qSGmdRS1LjLGpJapxFLUmNs6gl\nqXEWtSQ1zqKWpMZZ1JLUOItakhpnUUtS4yxqSWqcRS1JjbOoJalxFrUkNW6gv0ed5DHgl8AJ4Nmq\n8m9TS+ewXftn2bb7EEeOzbN2zSRbNk6zacO6rmOdtwbd4QXgz6vqZ2NLIqkJu/bPsnXnAeaPnwBg\n9tg8W3ceALCsO+LUh6RTbNt96LmSXjR//ATbdh/qKJEGLeoC7k+yN8nmpQ5IsjnJTJKZubm50SWU\ntKKOHJsfalzjN2hRv6WqrgCuA96T5KrTD6iq7VXVq6re1NTUSENKWjlr10wONa7xG6ioq2q2/+9R\n4F7gynGGktSdLRunmVw9ccrY5OoJtmyc7iiRli3qJBcleeni58DbgQfHHUxSNzZtWMdtN17OujWT\nBFi3ZpLbbrzcE4kdGmTVx6uAe5MsHv/5qrpvrKkkdWrThnUWc0OWLeqqehT44xXIIklagsvzJKlx\nFrUkNc6ilqTGWdSS1DiLWpIaZ1FLUuMsaklqnEUtSY2zqCWpcRa1JDXOopakxlnUktQ4i1qSGmdR\nS1LjLGpJapxFLUmNG2SHFwCSTAAzwGxVXT/qILv2z7Jt9yGOHJtn7ZpJtmycdocJSWKIogZuAQ4C\nLxt1iF37Z9m68wDzx08AMHtsnq07DwBY1pLOewNNfSS5FHgHcPs4Qmzbfei5kl40f/wE23YfGsfT\nSdJZZdA56o8B7wd+faYDkmxOMpNkZm5ubqgQR47NDzUuSeeTZYs6yfXA0ara+3zHVdX2qupVVW9q\namqoEGvXTA41Lknnk0HeUb8ZuCHJY8AXgLcm+dwoQ2zZOM3k6olTxiZXT7Bl4/Qon0aSzkrLFnVV\nba2qS6tqPXAT8LWqetcoQ2zasI7bbrycdWsmCbBuzSS33Xi5JxIlieFWfYzVpg3rLGZJWsJQRV1V\n3wC+MZYkkqQleWWiJDXOopakxlnUktQ4i1qSGmdRS1LjLGpJapxFLUmNs6glqXEWtSQ1zqKWpMZZ\n1JLUOItakhpnUUtS4yxqSWqcRS1JjbOoJalxg2xue0GS7yb5fpKHknx4JYJJkhYMssPL/wFvraqn\nk6wGvp3k36vqO2POJkligKKuqgKe7t9c3f+ocYaSJP3GQHPUSSaSPAAcBb5aVXuWOGZzkpkkM3Nz\nc6POKUnnrYGKuqpOVNXrgEuBK5O8doljtldVr6p6U1NTo84pSeetoVZ9VNUx4OvAteOJI0k63SCr\nPqaSrOl/PglcAzwy7mCSpAWDrPq4BPhMkgkWiv2uqvryeGNJkhYNsurjv4ANK5BFkrQEr0yUpMZZ\n1JLUOItakhpnUUtS4yxqSWqcRS1JjbOoJalxFrUkNc6ilqTGWdSS1DiLWpIaZ1FLUuMsaklqnEUt\nSY2zqCWpccv+PeoklwGfBV7Fwu7j26vq4+MOprPTh3YdYMeeJzhRxUTCza+/jH/ZdHnXsaSz2iA7\nvDwL/FNV7UvyUmBvkq9W1cNjzqazzId2HeBz33n8udsnqp67bVlLv7tlpz6q6smq2tf//JfAQWDd\nuIPp7LNjzxNDjUsazFBz1EnWs7At154l7tucZCbJzNzc3GjS6axyomqocUmDGbiok7wEuAe4taqe\nOv3+qtpeVb2q6k1NTY0yo84SE8lQ45IGM1BRJ1nNQknfWVU7xxtJZ6ubX3/ZUOOSBjPIqo8AdwAH\nq+qj44+ks9XiCUNXfUijlVpm/jDJW4BvAQeAX/eHP1hVXznT1/R6vZqZmRlZSEk61yXZW1W9pe5b\n9h11VX0bcJJRkjrilYmS1DiLWpIaZ1FLUuMsaklqnEUtSY2zqCWpcRa1JDXOopakxlnUktQ4i1qS\nGmdRS1LjLGpJapxFLUmNs6glqXEWtSQ1zqKWpMYtW9RJPpnkaJIHVyKQJOlUg7yj/jRw7ZhzSJLO\nYNmirqpvAj9fgSySpCWMbI46yeYkM0lm5ubmRvWwknTeG1lRV9X2qupVVW9qampUDytJ5z1XfUhS\n4yxqSWrcIMvzdgD/CUwnOZzkb8YfS5K0aNVyB1TVzSsRRJK0NKc+JKlxFrUkNc6ilqTGWdSS1DiL\nWpIaZ1FLUuMsaklqnEUtSY2zqCWpcRa1JDXOopakxlnUktQ4i1qSGmdRS1LjLGpJatxARZ3k2iSH\nkvwgyQfGHUqS9BvLbhyQZAL4N+Aa4DDwvSRfqqqHxx1OZ7Zr/yzbdh/iyLF51q6ZZMvGaTZtWNd1\nLEljMMg76iuBH1TVo1X1DPAF4J3jjaXns2v/LFt3HmD22DwFzB6bZ+vOA+zaP9t1NEljMEhRrwOe\nOOn24f6YOrJt9yHmj584ZWz++Am27T7UUSJJ4zSyk4lJNieZSTIzNzc3qofVEo4cmx9qXNLZbZCi\nngUuO+n2pf2xU1TV9qrqVVVvampqVPm0hLVrJocal3R2G6Sovwf8YZJXJ3kxcBPwpfHG0vPZsnGa\nydUTp4xNrp5gy8bpjhJJGqdlV31U1bNJ/h7YDUwAn6yqh8aeTGe0uLrDVR/S+SFVNfIH7fV6NTMz\nM/LHlaRzVZK9VdVb6j6vTJSkxlnUktQ4i1qSGmdRS1LjLGpJatxYVn0kmQN+/Dt++cXAz0YYZ1TM\nNRxzDcdcwzkXc/1BVS15teBYivqFSDJzpiUqXTLXcMw1HHMN53zL5dSHJDXOopakxrVY1Nu7DnAG\n5hqOuYZjruGcV7mam6OWJJ2qxXfUkqSTWNSS1LhmijrJJ5McTfJg11lOluSyJF9P8nCSh5Lc0nUm\ngCQXJPluku/3c32460yLkkwk2Z/ky11nOVmSx5IcSPJAkib+vGOSNUnuTvJIkoNJ3th1JoAk0/3/\np8WPp5Lc2kCu9/Vf7w8m2ZHkgq4zASS5pZ/poXH8PzUzR53kKuBp4LNV9dqu8yxKcglwSVXtS/JS\nYC+wqetd2JMEuKiqnk6yGvg2cEtVfafLXABJ/hHoAS+rquu7zrMoyWNAr6qauVAiyWeAb1XV7f2N\nOS6sqmNd5zpZkgkWdnV6fVX9rheyjSLHOhZe56+pqvkkdwFfqapPd5Wpn+u1LGz6fSXwDHAf8HdV\n9YNRPUcz76ir6pvAz7vOcbqqerKq9vU//yVwkAY2960FT/dvru5/dP5TN8mlwDuA27vO0rokLweu\nAu4AqKpnWivpvquBH3ZZ0idZBUwmWQVcCBzpOA/AHwF7qup/q+pZ4D+AG0f5BM0U9dkgyXpgA7Cn\n2yQL+lMMDwBHga9WVQu5Pga8H/h110GWUMD9SfYm2dx1GODVwBzwqf5U0e1JLuo61BJuAnZ0HaKq\nZoGPAI8DTwK/qKr7u00FwIPAnyZ5ZZILgb/g1H1mXzCLekBJXgLcA9xaVU91nQegqk5U1etY2HD4\nyv6vYJ1Jcj1wtKr2dpnjebylqq4ArgPe059u69Iq4ArgE1W1AfgV8IFuI52qPx1zA/DFBrK8Angn\nCz/g1gIXJXlXt6mgqg4C/wrcz8K0xwPAiVE+h0U9gP4c8D3AnVW1s+s8p+v/uvx14NqOo7wZuKE/\nF/wF4K1JPtdtpN/ovyOjqo4C97Iwp9ilw8Dhk34TupuF4m7JdcC+qvpp10GAtwE/qqq5qjoO7ATe\n1HEmAKrqjqr6k6q6Cvgf4L9H+fgW9TL6J+3uAA5W1Ue7zrMoyVSSNf3PJ4FrgEe6zFRVW6vq0qpa\nz8Kvy1+rqs7f8QAkuah/Mpj+9MLbWfiVtTNV9RPgiSSL28dfDXR6knoJN9PAtEff48AbklzY/768\nmoVzRp1L8nv9f3+fhfnpz4/y8ZfdhXylJNkB/BlwcZLDwD9X1R3dpgIW3iX+FXCgPx8M8MGq+kqH\nmQAuAT7TPyP/IuCuqmpqOVxjXgXcu/D9zSrg81V1X7eRAHgvcGd/iuFR4N0d53lO/wfaNcDfdp0F\noKr2JLkb2Ac8C+ynnUvJ70nySuA48J5RnxRuZnmeJGlpTn1IUuMsaklqnEUtSY2zqCWpcRa1JDXO\nopakxlnUktS4/wcK/a+XwekVewAAAABJRU5ErkJggg==\n",
-            "text/plain": [
-              "<Figure size 432x288 with 1 Axes>"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          }
-        }
-      ]
+      "execution_count": 0,
+      "outputs": []
     },
     {
       "cell_type": "code",
