--- a/module2-intermediate-linear-algebra/LS_DS_132_Intermediate_Linear_Algebra_Assignment.ipynb
+++ b/module2-intermediate-linear-algebra/LS_DS_132_Intermediate_Linear_Algebra_Assignment.ipynb
@@ -1093,6 +1093,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "ws6UWpxnOxQD",
+        "colab_type": "text"
+      },
+      "source": [
+        "# Come back to this"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "id": "oBCj1sDW2ouC",
         "colab_type": "text"
       },
