--- a/module3-dimensionality-reduction/LS_DS_133_High_Dimensional_Data_Assignment.ipynb
+++ b/module3-dimensionality-reduction/LS_DS_133_High_Dimensional_Data_Assignment.ipynb
@@ -1108,6 +1108,22 @@
       "outputs": []
     },
     {
+      "cell_type": "code",
+      "metadata": {
+        "id": "QuUnu8GkT-EP",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "# Solutions\n",
+        "# Get rid of redundant data\n",
+        "# Get More Data (easier said than done)\n",
+        "# Don't measure similaritys via Euclidean Distance"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "NZmqdeygbHJx",
